--- a/Round3/Manuscript/Permuting_Accuracy.bib
+++ b/Round3/Manuscript/Permuting_Accuracy.bib
@@ -1666,3 +1666,86 @@ Contact: tongt@hkbu.edu.hk},
 	year={2017},
 	publisher={Institute of Mathematical Statistics}
 }
+
+@article{fedorov2009consequences,
+	title={Consequences of dichotomization},
+	author={Fedorov, Valerii and Mannino, Frank and Zhang, Rongmei},
+	journal={Pharmaceutical Statistics},
+	volume={8},
+	number={1},
+	pages={50--61},
+	year={2009},
+	publisher={Wiley Online Library}
+}
+
+@inproceedings{ramdas2015decreasing,
+	title={On the decreasing power of kernel and distance based nonparametric hypothesis tests in high dimensions.},
+	author={Ramdas, Aaditya and Reddi, Sashank Jakkam and P{\'o}czos, Barnab{\'a}s and Singh, Aarti and Wasserman, Larry A},
+	booktitle={AAAI},
+	pages={3571--3577},
+	year={2015}
+}
+
+@article{kosorok2007marginal,
+	title={Marginal asymptotics for the “large p, small n” paradigm: with applications to microarray data},
+	author={Kosorok, Michael R and Ma, Shuangge and others},
+	journal={The Annals of Statistics},
+	volume={35},
+	number={4},
+	pages={1456--1486},
+	year={2007},
+	publisher={Institute of Mathematical Statistics}
+}
+
+@article{fan2007many,
+	title={To how many simultaneous hypothesis tests can normal, Student's t or bootstrap calibration be applied?},
+	author={Fan, Jianqing and Hall, Peter and Yao, Qiwei},
+	journal={Journal of the American Statistical Association},
+	volume={102},
+	number={480},
+	pages={1282--1288},
+	year={2007},
+	publisher={Taylor \& Francis}
+}
+
+@article{simes1986improved,
+	title={An improved Bonferroni procedure for multiple tests of significance},
+	author={Simes, R John},
+	journal={Biometrika},
+	volume={73},
+	number={3},
+	pages={751--754},
+	year={1986},
+	publisher={Oxford University Press}
+}
+
+@article{tony2014two,
+	title={Two-sample test of high dimensional means under dependence},
+	author={Tony Cai, T and Liu, Weidong and Xia, Yin},
+	journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+	volume={76},
+	number={2},
+	pages={349--372},
+	year={2014},
+	publisher={Wiley Online Library}
+}
+
+@article{donoho2004higher,
+	title={Higher criticism for detecting sparse heterogeneous mixtures},
+	author={Donoho, David and Jin, Jiashun},
+	journal={Annals of Statistics},
+	pages={962--994},
+	year={2004},
+	publisher={JSTOR}
+}
+
+@article{zhong2013tests,
+	title={Tests alternative to higher criticism for high-dimensional means under sparsity and column-wise dependence},
+	author={Zhong, Ping-Shou and Chen, Song Xi and Xu, Minya and others},
+	journal={The Annals of Statistics},
+	volume={41},
+	number={6},
+	pages={2820--2851},
+	year={2013},
+	publisher={Institute of Mathematical Statistics}
+}
