--- a/Round3/file14.Rmd
+++ b/Round3/file14.Rmd
@@ -69,6 +69,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
       Goeman=t_goeman(x1, x2),
       sd=t_SD(x1, x2),
+      MMD=t_kmmd(x1, x2),
+      dCOV=t_dcov(x1,x2),
       lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
       svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
       svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
@@ -104,6 +106,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
         Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
         Goeman=t_goeman(x1, x2),
         sd=t_SD(x1, x2),
+        MMD=t_kmmd(x1, x2),
+        dCOV=t_dcov(x1,x2),
         lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
         svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
         svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
