--- a/Round3/file13.Rmd
+++ b/Round3/file13.Rmd
@@ -23,8 +23,12 @@ source('Gilron Effect of Cross Validatino.R')
 ## Signal in location
 effects <- seq(0, 0.5, length=3) # change in location
 
-## Signal in scale
+## Covariance
 Sigma <- diag(p)
+# lattice::levelplot(Sigma)
+direction0 <- rep(1,p)
+maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
+direction <- 23 * direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -45,8 +49,9 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
 
   # Shift alternative:
   # effect <- effects[[3]]
-  noise <- .noise + effect * labels
-
+  noise <- .noise
+  shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+  noise[labels,] <- noise[labels,] + shift
 
   # Asign observations to folds. Use the simple label structure to balance folds.
   fold.ids <- balanced_folding(labels, n.folds, balance = balance)
@@ -56,30 +61,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
   x1 <- noise[labels,]
   x2 <- noise[!labels,]
   
-  ts <- list(
-    Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-    Hotelling=t_Hotelling(x1, x2, FALSE),
-    Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-    Goeman=t_goeman(x1, x2),
-    sd=t_SD(x1, x2),
-    lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-    lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-    lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-    lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-    svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-    svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-    # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-    # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-    svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-    svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-    # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-    # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
-    svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.1, type=1),
-    svm.Boot.2=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.2, type=1),
-    svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.1, type=1),
-    svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.2,  type=1),
-    lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=2, type=1)
-  )
+  ts <- statistics.2(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
   
   # Initialize result containers
   permuted <- matrix(NA, ncol=length(ts), nrow=n.permutations)
@@ -99,30 +81,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
     # Checking balance:
     # capture.output(table(.fold.ids, .labels), file=balanc.log, append = TRUE)
     
-    permuted[i,] <- c(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      Goeman=t_goeman(x1, x2),
-      sd=t_SD(x1, x2),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1),
-      # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2),
-      svm.Boot.1=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.1, type=1),
-      svm.Boot.2=t_svm_boot(noise, labels, B=10, type2=2, cost=cost.2, type=1),
-      svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.1, type=1),
-      svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=cost.2,  type=1),
-      lda.Boot.1=t_lda_boot(noise, labels, B=10, type2=2, type=1)
-    )
+    ts <- statistics.2(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    
   } # End permutation
 
   # Compute p-vals for each statistic
@@ -134,8 +94,6 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
   c(effect=effect, pvals) 
 }
 pbPost("note", "Done", the.message)
-
-pbPost(type = "note", body = "Done", the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
