--- a/Round3/file32.Rmd
+++ b/Round3/file32.Rmd
@@ -68,25 +68,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     fold.ids <- balanced_folding(labels, n.folds, balance = balance)
     
     # Observables 
-    ts <- list(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      Goeman=t_goeman(x1, x2),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-      lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-      lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-      sd=t_SD(x1, x2),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-      # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-      # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-      svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-      svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1)
-      # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-      # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
-    )
+    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
     # Prepare to permute
     old.labels <- labels
@@ -103,25 +85,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- c(
-        Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-        Hotelling=t_Hotelling(x1, x2, FALSE),
-        Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-        Goeman=t_goeman(x1, x2),
-        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.CV.2=t_lda_cv(noise, labels, labels, fold.ids, type=2),
-        lda.noCV.1=t_lda(noise, labels, noise, labels, type=1),
-        lda.noCV.2=t_lda(noise, labels, noise, labels, type=2),
-        sd=t_SD(x1, x2),
-        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=1),
-        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=1),
-        # svm.CV.3=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.1, type=2),
-        # svm.CV.4=t_svm_cv(noise, labels, labels, fold.ids, cost=cost.2, type=2),
-        svm.noCV.1=t_svm(noise, labels, noise, labels, cost=cost.1, type=1),
-        svm.noCV.2=t_svm(noise, labels, noise, labels, cost=cost.2, type=1)
-        # svm.noCV.3=t_svm(noise, labels, noise, labels, cost=cost.1, type=2),
-        # svm.noCV.4=t_svm(noise, labels, noise, labels, cost=cost.2, type=2)
-      )
+      permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     } # End permutation
     
     ## Compute p-vals for each statistic
