--- a/Round3/file14.Rmd
+++ b/Round3/file14.Rmd
@@ -3,8 +3,9 @@ title: "HighDim Classifiers"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
-
 
 
 ```{r preliminaries}
@@ -26,10 +27,10 @@ source('Gilron Effect of Cross Validatino.R')
 
 ## Signal in scale
 Sigma <- diag(p)
-lattice::levelplot(Sigma)
+# lattice::levelplot(Sigma)
 direction0 <- rep(1,p)
-maha <- mahalanobis(x = direction0, center = 0, cov = Sigma)
-direction <- direction0 *sqrt(p/maha)
+maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
+direction <- 23 * direction0 / sqrt(n/2*maha)
 ```
 
 
@@ -51,9 +52,10 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     
     # Shift alternative:
     # effect <- effects[[2]]
+    
     noise <- .noise
-    noise <- .noise + effect * labels
-    # noise[labels,] <- noise[labels,] + effect * direction
+    shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+    noise[labels,] <- noise[labels,] + shift
     
     ## Compute observed statistic
     x1 <- noise[labels,]
@@ -63,27 +65,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     fold.ids <- balanced_folding(labels, n.folds, balance = balance)
     
     # Observables 
-    ts <- list(
-      Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-      Hotelling=t_Hotelling(x1, x2, FALSE),
-      Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-      Goeman=t_goeman(x1, x2),
-      sd=t_SD(x1, x2),
-      MMD=t_kmmd(x1, x2),
-      dCOV=t_dcov(x1,x2),
-      lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-      svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
-      svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-      svm.CV.5=t_svm_cv(noise, labels, labels, fold.ids, cost=1e2, type=1),
-      svm.CV.6=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-2, type=1),
-      lda.highdim.1=t_dlda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.highdim.2=t_hdrda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.highdim.3=t_sdlda_cv(noise, labels, labels, fold.ids, type=1),
-      lda.highdim.4=t_sdlda_boot(noise, labels, B=50, type2=2, type=1),
-      # svm.highdim.1=t_svml2_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-      svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=1e1, type=1),
-      svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=1e-1,  type=1)
-    )
+    ts <-statistics.3(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2) 
     
     # Prepare to permute
     old.labels <- labels
@@ -100,27 +82,8 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       x1 <- noise[labels,]
       x2 <- noise[!labels,]
       
-      permuted[i,] <- c(
-        Oracle=t_Oracle(x1, x2, Sigma, Sigma),
-        Hotelling=t_Hotelling(x1, x2, FALSE),
-        Hotelling.shrink=t_Hotelling(x1, x2, TRUE),
-        Goeman=t_goeman(x1, x2),
-        sd=t_SD(x1, x2),
-        MMD=t_kmmd(x1, x2),
-        dCOV=t_dcov(x1,x2),
-        lda.CV.1=t_lda_cv(noise, labels, labels, fold.ids, type=1),
-        svm.CV.1=t_svm_cv(noise, labels, labels, fold.ids, cost=1e1, type=1),
-        svm.CV.2=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-        svm.CV.5=t_svm_cv(noise, labels, labels, fold.ids, cost=1e2, type=1),
-        svm.CV.6=t_svm_cv(noise, labels, labels, fold.ids, cost=1e-2, type=1),
-        lda.highdim.1=t_dlda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.highdim.2=t_hdrda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.highdim.3=t_sdlda_cv(noise, labels, labels, fold.ids, type=1),
-        lda.highdim.4=t_sdlda_boot(noise, labels, B=50, type2=2, type=1),
-        # svm.highdim.1=t_svml2_cv(noise, labels, labels, fold.ids, cost=1e-1, type=1),
-        svm.Boot.3=t_svm_boot(noise, labels, B=50, type2=2, cost=1e1, type=1),
-        svm.Boot.4=t_svm_boot(noise, labels, B=50, type2=2, cost=1e-1,  type=1)
-      )
+      permuted[i,] <- statistics.3(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2) 
+        
     } # End permutation
     
     # Compute p-vals for each statistic
@@ -142,32 +105,12 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 ```{r analyze multiple effects}
 # load("file14.RData")
-err.bar <- round(3*sqrt(.05*.95/(n.replications)),3) # confidence limits of p-value
-.limits <- 0.05 + c(-err.bar,0,err.bar)
-
-pvals.1.9 %<>%  as.data.table()
-
-pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic') 
-# pvals.melt <- pvals.melt[!(statistic %in% statistic.filter),,]
-
-pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
+source('prepare_graphics.R')
+plot.3
 ```
 
 
 ```{r}
-plot.3 <- pvals.melt %>% 
-  ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
-  theme_bw(base_size = 20)+
-  theme(legend.position="none")+
-  # ggtitle("Fixed signal, Gaussian Noise")+
-  ylab('Power')+
-  xlab('')+
-  stat_summary(fun.y='mean', geom="point", cex=4) +
-  geom_hline(yintercept=0.05, lty=2)+
-  geom_vline(xintercept=.limits, lty=c(3,2,3))+
-  coord_flip()
-plot.3
-
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot.3
 dev.off()
