--- a/Round3/file32.Rmd
+++ b/Round3/file32.Rmd
@@ -11,6 +11,7 @@ editor_options:
 
 ```{r preliminaries}
 file.name <- "file32"
+setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding and refolding.
 n.replications <-  1e3
