--- a/Round3/file13.Rmd
+++ b/Round3/file13.Rmd
@@ -10,6 +10,7 @@ editor_options:
 
 ```{r preliminaries}
 file.name <- "file13"
+setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <- 1e3
@@ -70,7 +71,6 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
   
   old.labels <- labels
   old.folds.ids <- fold.ids
-  statistics.names <- names(ts)
   
   for(i in 1:n.permutations){
     # i <- 1
@@ -83,7 +83,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
     # Checking balance:
     # capture.output(table(.fold.ids, .labels), file=balanc.log, append = TRUE)
     
-    ts <- statistics.2(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    permuted[i,] <- statistics.2(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
   } # End permutation
 
@@ -92,7 +92,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind)  %:% foreach(effect=eff
   for(i in seq_along(ts)){
     pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
   }
-  
+  names(pvals) <- names(ts)
   c(effect=effect, pvals) 
 }
 pbPost("note", "Done", the.message)
@@ -113,31 +113,22 @@ pvals.melt <- melt(pvals.1.9, id.vars=c("effect"), variable.name='statistic')
 pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.factor(effect)),] 
 
 # Reorder levels
-file13.levels <- c("Oracle", "Hotelling", "Hotelling.shrink", "Goeman", "sd", 
-"lda.CV.1", "lda.noCV.1", "svm.CV.1", 
-"svm.CV.2", "svm.noCV.1", "svm.noCV.2", "svm.Boot.1", "svm.Boot.2", 
-"svm.Boot.3", "svm.Boot.4", "lda.Boot.1")
-pvals.melt$statistic <- factor(pvals.melt$statistic, levels=file13.levels)
+# file13.levels <- c("Oracle", "Hotelling", "Hotelling.shrink", "Goeman", "sd", 
+# "lda.CV.1", "lda.noCV.1", "svm.CV.1", 
+# "svm.CV.2", "svm.noCV.1", "svm.noCV.2", "svm.Boot.1", "svm.Boot.2", 
+# "svm.Boot.3", "svm.Boot.4", "lda.Boot.1")
+# pvals.melt$statistic <- factor(pvals.melt$statistic, levels=file13.levels)
 
 # Filter statistics
 pvals.melt <- pvals.melt[!is.na(statistic),,]
 ```
 
+```{r}
+source('prepare_graphics.R')
+plot.3
+```
 
 ```{r}
-plot.3 <- pvals.melt %>% 
-  ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
-  theme_bw(base_size = 20)+
-  theme(legend.position="none")+
-  # ggtitle("Fixed signal, Gaussian Noise")+
-  ylab('Power')+
-  xlab('')+
-  stat_summary(fun.y='mean', geom="point", cex=4) +
-  geom_hline(yintercept=0.05, lty=2)+
-  geom_vline(xintercept=.limits, lty=c(3,2,3))+
-  coord_flip()
-plot.3
-
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
 plot.3
 dev.off()
