--- a/Round3/Manuscript/Permuting_Accuracy.bib
+++ b/Round3/Manuscript/Permuting_Accuracy.bib
@@ -1749,3 +1749,30 @@ Contact: tongt@hkbu.edu.hk},
 	year={2013},
 	publisher={Institute of Mathematical Statistics}
 }
+
+@article{chang2014simulation,
+	title={Simulation-based hypothesis testing of high dimensional means under covariance heterogeneity},
+	author={Chang, Jinyuan and Zheng, Chao and Zhou, Wen-Xin and Zhou, Wen},
+	journal={arXiv preprint arXiv:1406.1939},
+	year={2014}
+}
+
+@article{moscovich2016exact,
+	title={On the exact Berk-Jones statistics and their $ p $-value calculation},
+	author={Moscovich, Amit and Nadler, Boaz and Spiegelman, Clifford and others},
+	journal={Electronic Journal of Statistics},
+	volume={10},
+	number={2},
+	pages={2329--2354},
+	year={2016},
+	publisher={The Institute of Mathematical Statistics and the Bernoulli Society}
+}
+
+@article{dempster1958high,
+	title={A high dimensional two sample significance test},
+	author={Dempster, Arthur P},
+	journal={The Annals of Mathematical Statistics},
+	pages={995--1010},
+	year={1958},
+	publisher={JSTOR}
+}
