before Jelle and Yuval chat

--- a/Round3/.Rmd
+++ b/Round3/.Rmd
@@ -187,7 +187,7 @@ pvals.melt[,c("reject","effect.factor"):=list(as.numeric(value <= 0.05), as.fact
 
 
 ```{r}
-plot.3 <- pvals.melt %>% 
+plot(plot.3) <- pvals.melt %>% 
   ggplot(aes(y=reject, x=statistic, group=effect.factor, shape=effect.factor, color=effect.factor)) +
   theme_bw(base_size = 20)+
   theme(legend.position="none")+
@@ -198,10 +198,10 @@ plot.3 <- pvals.melt %>%
   geom_hline(yintercept=0.05, lty=2)+
   geom_vline(xintercept=.limits, lty=c(3,2,3))+
   coord_flip()
-plot.3
+plot(plot.3)
 
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
