--- a/Round3/Unused-RMDs/file25.Rmd
+++ b/Round3/Unused-RMDs/file25.Rmd
@@ -166,10 +166,10 @@ plot.3 <- pvals.melt %>%
   geom_vline(xintercept=.limits, lty=c(3,2,3))+
   coord_flip()+ 
   scale_fill_brewer(palette="blues")
-plot.3
+plot(plot.3)
 
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
