--- a/Round3/file1.Rmd
+++ b/Round3/file1.Rmd
@@ -14,7 +14,7 @@ setwd('~/workspace/permuting_accuracy/Round3/')
 
 balance <- TRUE   # set for TRUE for balanced folding ana refolding.
 n.replications <-  1e2
-large.sample <- 1e2
+large.sample <- 1e1
 p <- 23*large.sample
 n <- 40*large.sample # total sample size-> n/2 in each group.
 n.permutations <- 3e2
@@ -97,7 +97,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
 } 
 
 pbPost(type = "note", body = "Done", the.message)
-# save.image(file=paste(file.name,".RData", sep=''))
+save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
@@ -122,12 +122,12 @@ pvals.melt <- pvals.melt[!is.na(statistic),,]
 
 ```{r}
 source('prepare_graphics.R')
-plot.3
+plot(plot.3)
 ```
 
 ```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
