--- a/Round3/file12.Rmd
+++ b/Round3/file12.Rmd
@@ -101,13 +101,13 @@ save.image(file=paste(file.name,".RData", sep=''))
 ```{r analyze multiple effects}
 # load("file12.RData")
 source('prepare_graphics.R')
-plot.3
+plot(plot.3)
 ```
 
 
 ```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
