--- a/Round3/file24.Rmd
+++ b/Round3/file24.Rmd
@@ -111,13 +111,13 @@ save.image(file=paste(file.name,".RData", sep=''))
 ```{r analyze multiple effects}
 # load("file24.RData")
 source('prepare_graphics.R')
-plot.3
+plot(plot.3)
 ```
 
 
 ```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
