--- a/Round3/file34.Rmd
+++ b/Round3/file34.Rmd
@@ -103,12 +103,12 @@ save.image(file=paste(file.name,".RData", sep=''))
 
 ```{r}
 source('prepare_graphics.R')
-plot.3
+plot(plot.3)
 ```
 
 ```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
-plot.3
+plot(plot.3)
 dev.off()
 ```
 
