--- a/Round3/file37.Rmd
+++ b/Round3/file37.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basic setup. Unbalanced Folding."
+title: "Short term memory (AR(1)) with signal in mid PCs"
 author: "Jonathan Rosenblatt"
 date: "8/2/2017"
 output: html_document
@@ -9,23 +9,28 @@ editor_options:
 
 
 ```{r preliminaries}
-file.name <- "file3"
+file.name <- "file37"
 setwd('~/workspace/permuting_accuracy/Round3/')
 
-balance <- FALSE   # set for TRUE for balanced folding ana refolding.
-large.sample <- 1e0
-p <- 23*large.sample
-n <- 4e1*large.sample # total sample size-> n/2 in each group.
+balance <- TRUE   # set for TRUE for balanced folding ana refolding.
+n.replications <-  1e2
+p <- 23
+n <- 4e1 # total sample size-> n/2 in each group.
 n.permutations <- 3e2
 n.folds <- 4
+cost.1 <- 1e1
+cost.2 <- 1e-1
 
 source('Gilron Effect of Cross Validatino.R')
 
-effects <- seq(0, 0.5, length=3) # change in location
+## Signal in location
+effects <- seq(0, 0.5, length=3) 
 
-Sigma <- diag(p)
+## Dependence
+Sigma <- ar1_cov(n = p, rho=0.6)
 # lattice::levelplot(Sigma)
-direction0 <- rep(1,p)
+Sigma.eigen <- eigen(Sigma, symmetric=TRUE)
+direction0 <- Sigma.eigen$vectors[,15] 
 maha <- direction0 %*% solve(Sigma) %*% direction0 %>% c
 direction <- 23 * direction0 / sqrt(n/2*maha)
 ```
@@ -40,20 +45,18 @@ registerDoMC(cores=100)
 
 ```{r independent noise variable folds}
 pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
-  foreach(effect=effects, .combine=rbind) %do% {
+  foreach(effect=effects, .combine=rbind)  %do% {
     
     labels <- sample(c(rep(TRUE, n/2), rep(FALSE,n/2))) # group assignemt labels
     
     ## Gaussian noise
     .noise <- rmvnorm(n=n, sigma = Sigma)
-    
+
     ## Shift alternative:
-    # effect <- effects[[3]]
-    
     noise <- .noise
-    shift <- matrix(effect * direction, nrow=n/2, ncol=p, byrow = TRUE)
+    shift <- matrix(effect * direction, nrow=20, ncol=23, byrow = TRUE)
     noise[labels,] <- noise[labels,] + shift
-    
+
     ## Compute observed statistic
     x1 <- noise[labels,]
     x2 <- noise[!labels,]
@@ -63,7 +66,7 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
     # capture.output(table(fold.ids, labels), file=balance.log, append = TRUE)
     
     # Observables 
-    ts <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
+    ts <-statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     
     # Prepare to permute
     old.labels <- labels
@@ -83,26 +86,28 @@ pvals.1.9 <- foreach(j=1:n.replications, .combine=rbind) %dopar%{
       permuted[i,] <- statistics(x1,x2,Sigma,noise,labels,fold.ids,cost.1,cost.2)
     } # End permutation
     
-    # Compute p-vals for each statistic
+    ## Compute p-vals for each statistic
     pvals <- rep(NA, length(ts))
     for(i in seq_along(ts)){
-      pvals[i] <- mean(permuted[,i]>=ts[i], na.rm=TRUE)
+      pvals[i] <- mean(ts[i]<=permuted[,i], na.rm=TRUE)
     }
     names(pvals) <- names(ts)
-    
+
     c(effect=effect, pvals) 
   }
 } 
-
+  
 pbPost(type = "note", body = "Done", the.message)
 save.image(file=paste(file.name,".RData", sep=''))
 ```
 
 
-```{r}
+
+```{r analyze multiple effects}
 source('prepare_graphics.R')
 plot(plot.3)
 ```
+
 
 ```{r}
 pdf(file = paste('Output/',file.name,'.pdf', sep=''))
