--- a/Round3/Manuscript/preamble.tex
+++ b/Round3/Manuscript/preamble.tex
@@ -84,3 +84,4 @@
 \newcommand{\intersect}{\cap}
 \newcommand{\majority}{\accEstim_{Maj}}
 \newcommand{\statistic}{\mathcal{T}}
+\DeclareMathOperator{\Tr}{Tr}
