--- a/Round3/Manuscript/Permuting_Accuracy.bib
+++ b/Round3/Manuscript/Permuting_Accuracy.bib
@@ -1776,3 +1776,14 @@ Contact: tongt@hkbu.edu.hk},
 	year={1958},
 	publisher={JSTOR}
 }
+
+@article{chen2010two,
+	title={A two-sample test for high-dimensional data with applications to gene-set testing},
+	author={Chen, Song Xi and Qin, Ying-Li and others},
+	journal={The Annals of Statistics},
+	volume={38},
+	number={2},
+	pages={808--835},
+	year={2010},
+	publisher={Institute of Mathematical Statistics}
+}
